       and request /monit/ with content = "Monit [0-9.]+"
    then alert
This statement deprecate the old hostheader statement, which was
used to only set the HTTP host header.

New: Program check supports exit status change monitoring now. Syntax:
  check program foobar with path /usr/local/myscript.sh
    if changed status then alert


Version 5.8.1

Fixed: Monit XML may be invalid if port check with custom HTTP
protocol request contains ampersand. Thanks to Markus Juenemann
for report.

Fixed: 5.8 added extra socket poll time which showed up as pluss
~ 0.5 sec in M/Monit's port response charts. This release remove
this extra poll time which is not needed.

Fixed: If the process is not running, do not call stop program
during restart (back to Monit 5.6 behavior).

Fixed: Do graceful TCP close for TCP/UDP port test instead of
RST.

Fixed: restart action for non-process service types.

Fixed: FreeBSD jail system memory usage report.

Fixed: Issue #37 crash


Version 5.8

New: Monit no longer purge the environment for sub-processes

New: Add command line option to view Monit ID (-i/--id)

New: Add command line option to reset Monit ID (-r/--resetid)

New: Add client support for using TLS version 1.1 and 1.2. A recent
1.x version of OpenSSL is required and of course that the server
speaks this TLS version. At this time, not many does. Example: 
if failed port 443 with type TCPSSL tlsv11 protocol http  then alert

New: Process UID, EUID and GID tests. Allows to test if the
process is running as a given user. Example:
    check process syslog with pidfile /var/run/rsyslogd.pid
        if failed uid  "syslog" then alert
        if failed euid "syslog" then alert
        if failed gid  "syslog" then alert

New: Add WebSocket protocol test support for port check. Example:
    check host websocket.org with address "echo.websocket.org"
        if failed 
           port 80 protocol websocket
           host "echo.websocket.org"
           request "/"